fixed page bg alignment issues

--- a/bottles.css
+++ b/bottles.css
@@ -2,7 +2,6 @@
     position: absolute;
     width: 100%;
     top: 10vh;
-    justify-content: center;
     display: flex;
 }
 
