--- a/styles.css
+++ b/styles.css
@@ -178,9 +178,6 @@ html, body {
     opacity: 0.8;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
     margin-top: 2.5vh;
     margin-left: auto;
     margin-right: auto;
